Fixed alignment in main

--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ main {
   height: 70vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
 }
 
